change order of projects, added spacing and fixed spelling

--- a/src/sass/sections/_projects.scss
+++ b/src/sass/sections/_projects.scss
@@ -76,3 +76,6 @@
     }
   }
 }
+.section-spacing {
+  margin-bottom: 150px;
+}
